Fixed spacing issues in responsive views for Meetings

--- a/app/assets/stylesheets/application/shared.scss
+++ b/app/assets/stylesheets/application/shared.scss
@@ -72,7 +72,8 @@ h1.strategy_name a:visited {
 .quick_create_text,
 .moment,
 #categories_moods_text,
-.meeting {
+.meeting,
+.group_info {
 	.align_left {
 		float: left;
 		display: inline-block;
